task 2 2nd commit

--- a/task4/Weather.html
+++ b/task4/Weather.html
@@ -9,11 +9,12 @@
 
 
    
-    <button onclick="getWeather()">Click Here to Weather details</button><br>
+    
 
-    <form>
-        <input type="text" name="city">
-    </form>
+    <input type="text" id="city" placeholder="Enter a city name">
+
+
+    <button onclick="getWeather()">Click Here to Weather details</button><br>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="weathrjs.js"></script>
